<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnboundNsPrefix, XmlUnboundNsPrefix -->
<resources>
    <string name="app_name">private-league</string>
    <string name="start_activity_set_login_data">Login</string>
    <string name="start_activity_ranking">Tabelle</string>
    <string name="start_activity_playing_schedule">Spielplan</string>
    <string name="start_activity_teambet">Teamwette</string>
    <string name="set_login_data_name">Benutzername</string>
    <string name="set_login_data_password">Passwort</string>
    <string name="set_login_data_show">Passwort anzeigen</string>
    <string name="set_login_data_save">Speichern</string>
    <string name="set_login_data_save_message">Daten erfolgreich gespeichert</string>
    <string name="spielplan_spinner_label">Spieltag</string>
    <string name="server_location_menu_edit_server_data">Server</string>
    <string name="set_server_data_get_server">Hole Daten von:</string>
    <string name="set_server_data_post_server">Sende Daten an:</string>
    <string name="set_server_data_save">Speichern</string>
    <string name="default_get_server">http://it.draigon.de/getBets.php</string>
    <string name="default_post_server">"http://it.draigon.de/placeBets.php"</string>
    <string name="matchdetails_upload_bet">Hochladen</string>
    <string name="set_login_data_choose_group">Bitte Gruppe auswählen:</string>
    <string name="rb_set_login_data_server_select_1">IT.NRW</string>
    <string name="rb_set_login_data_server_select_2">Dennis private Gruppe</string>
    <string name="upload_bet_success">Wette erfolgreich platziert</string>
    <string name="upload_bet_late">Wette konnte nicht platziert werden da der Einsendeschluss erreicht ist</string>
    <string name="upload_bet_unknown_user">Wette konnte nicht platziert werden, bitte überprüfen sie die Logindaten
    </string>
    <string name="upload_bet_illegal_parameter">Wette konnte nicht platziert werden, bitte überprüfen sie ihre
        Eingaben
    </string>
    <string name="no_internet_connection">Server nicht erreichbar, bitte überprüfen sie ihre Internetverbindung</string>
    <string name="update_dialog_version_available">Es ist eine neue Version verfügbar. Möchten sie diese
        herunterladen?
    </string>
    <string name="ok">Ja</string>
    <string name="cancel">Nein</string>
    <string name="update_dialog_update_failed">Es ist ein Fehler aufgetreten. Bitte aktualisieren sie die Anwendung
        manuell.
    </string>
    <string name="menu_refresh_data">Daten aktualisieren</string>
    <string name="progress_title">Daten aktualisieren</string>
    <string name="progress_please_wait">bitte warten...</string>
    <string name="menu_switch_group">Gruppe wechseln</string>
    <string name="groups_refreshed">Gruppen aktualisiert</string>
    <string name="group_switched_to">Aktuelle Gruppe:</string>

    <!--<string name=""></string>
   <string name=""></string>-->


</resources>
